changes to config

--- a/examples/FinRL_PaperTrading_Demo.ipynb
+++ b/examples/FinRL_PaperTrading_Demo.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "8Z6qlLXY-fA2"
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -99,7 +99,16 @@
     "id": "H7I7zsyYfoLJ",
     "outputId": "1812c13b-410f-434c-eb07-29782ba186e6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\pyfolio\\pos.py:26: UserWarning: Module \"zipline.assets\" not found; multipliers will not be applied to position notionals.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "#from finrl.config_tickers import DOW_30_TICKER\n",
     "#from finrl.config import INDICATORS\n",
@@ -125,6 +134,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import importlib;\n",
+    "import finrl;\n",
+    "\n",
+    "importlib.reload(finrl.config);\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -144,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "customIndicators=['close_25_sma','close_12_sma','cci_20']"
+    "customIndicators=['close_25_sma','close_12_sma','close_180_sma','cci_20']"
    ]
   },
   {
@@ -171,7 +200,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
+    "##PPO Actor\n",
     "# This is the actor and its capabilities.\n",
     "#it will only enforce the policy.\n",
     "#it uses a neural network to make its decisions.\n",
@@ -938,7 +967,7 @@
    "outputs": [],
    "source": [
     "#ticker_list = DOW_30_TICKER\n",
-    "ticker_list = ['AMCR'] #Let's get 'PHUN','GPRO','KEY','SLV',\n",
+    "ticker_list = ['AMCR','PHUN','GPRO','ACI','XRX'] #Let's get 'PHUN','GPRO','KEY','SLV',\n",
     "\n"
    ]
   },
@@ -969,22 +998,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(action_dim)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "UIV0kO_y-inG",
-    "outputId": "bd7b3c21-641e-4eb7-a4af-ae7d156042a6"
-   },
-   "outputs": [],
-   "source": [
-    "print(action_dim)"
+    "#print(action_dim)"
    ]
   },
   {
@@ -1229,7 +1243,7 @@
    "outputs": [],
    "source": [
     "ERL_PARAMS = {\"learning_rate\": 3e-1,\"batch_size\": 2048,\"gamma\":  0.99,\n",
-    "        \"seed\":312,\"net_dimension\":[128,64,32,16,8,4], \"target_step\":20000, \"eval_gap\":30,\n",
+    "        \"seed\":312,\"net_dimension\":[128,64,32,16,8,4], \"target_step\":40000, \"eval_gap\":30,\n",
     "        \"eval_times\":1} \n",
     "env = StockTradingEnv\n",
     "#if you want to use larger datasets (change to longer period), and it raises error, \n",
@@ -1239,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1252,22 +1266,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alpaca successfully connected\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
-      "  if pd.Timedelta(time_interval).delta < day_delta:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The price of the first row for ticker  AMCR  is NaN.  It will filled with the first valid price.\n"
+      "The price of the first row for ticker  AMCR  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  GPRO  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  PHUN  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  XRX  is NaN.  It will filled with the first valid price.\n"
      ]
     },
     {
@@ -1292,19 +1294,19 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        13  |    -0.49    0.00   12345  |     0.02      0.08\n",
-      "| 4.00e+04        27  |    -0.48    0.00   12345  |     0.02      0.20\n",
-      "| 6.00e+04        40  |    -0.48    0.00   12345  |     0.01      0.25\n",
-      "| 8.00e+04        53  |    -0.47    0.00   12345  |     0.00      0.26\n",
-      "| 1.00e+05        67  |    -0.51    0.00   12345  |     0.00      0.29\n"
+      "| 2.00e+04        16  |    -0.49    0.00   12345  |     0.00      0.23\n",
+      "| 4.00e+04        31  |    -0.51    0.00   12345  |     0.00      0.31\n",
+      "| 6.00e+04        47  |    -0.51    0.00   12345  |     0.04      0.44\n",
+      "| 8.00e+04        62  |    -0.52    0.00   12345  |     0.00      0.61\n",
+      "| 1.00e+05        78  |    -0.48    0.00   12345  |     0.02      0.76\n"
      ]
     }
    ],
    "source": [
-    "TrainSd = datetime.now()+timedelta(days=-62);\n",
+    "TrainSd = datetime.now()+timedelta(days=-90);\n",
     "TrainSd = TrainSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
-    "TrainEd = datetime.now()+timedelta(days=-13);\n",
+    "TrainEd = datetime.now()+timedelta(days=-21);\n",
     "TrainEd = TrainEd.strftime('%Y-%m-%d')\n",
     "#print(ed)\n",
     "# train function implements finrl.meta.data_processor import DataProcessor\n",
@@ -1339,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {
     "id": "SxYoWCDa02TW"
    },
@@ -1363,7 +1365,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The price of the first row for ticker  AMCR  is NaN.  It will filled with the first valid price.\n"
+      "The price of the first row for ticker  ACI  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  AMCR  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  GPRO  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  PHUN  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  XRX  is NaN.  It will filled with the first valid price.\n"
      ]
     },
     {
@@ -1379,7 +1385,7 @@
      "output_type": "stream",
      "text": [
       "The price of the first row for ticker  VIXY  is NaN.  It will filled with the first valid price.\n",
-      "price_array:  2736\n",
+      "price_array:  5082\n",
       "| load actor from: ./papertrading_erl/actor.pth\n"
      ]
     },
@@ -1387,7 +1393,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_12360\\3323038178.py:104: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
+      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_35624\\3323038178.py:104: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
       "  s_tensor = _torch.as_tensor((state,), device=device)\n"
      ]
     },
@@ -1396,7 +1402,7 @@
      "output_type": "stream",
      "text": [
       "Test Finished!\n",
-      "episode_return 0.9990060331271601\n"
+      "episode_return 0.9989669840606944\n"
      ]
     }
    ],
@@ -1407,7 +1413,7 @@
     "# Test Finished!\n",
     "# episode_return 1.0200287649085367\n",
     "#Time interval defines the data download frequency/period.\n",
-    "TestSd = datetime.now()+timedelta(days=-12);\n",
+    "TestSd = datetime.now()+timedelta(days=-20);\n",
     "TestSd = TestSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
     "TestEd = datetime.now()+timedelta(days=-1);\n",
@@ -1450,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1478,7 +1484,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The price of the first row for ticker  AMCR  is NaN.  It will filled with the first valid price.\n"
+      "The price of the first row for ticker  ACI  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  AMCR  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  GPRO  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  PHUN  is NaN.  It will filled with the first valid price.\n",
+      "The price of the first row for ticker  XRX  is NaN.  It will filled with the first valid price.\n"
      ]
     },
     {
@@ -1503,22 +1513,20 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        13  |    -0.46    0.00   12345  |     0.07      0.11\n",
-      "| 4.00e+04        27  |    -0.50    0.00   12345  |     0.10      0.13\n",
-      "| 6.00e+04        40  |    -0.47    0.00   12345  |     0.08      0.18\n",
-      "| 8.00e+04        54  |    -0.50    0.00   12345  |     0.08      0.19\n",
-      "| 1.00e+05        67  |    -0.49    0.00   12345  |     0.00      0.20\n",
-      "| 1.20e+05        81  |    -0.46    0.00   12345  |     0.02      0.25\n",
-      "| 1.40e+05        94  |    -0.49    0.00   12345  |     0.04      0.27\n",
-      "| 1.60e+05       108  |    -0.47    0.00   12345  |     0.02      0.29\n",
-      "| 1.80e+05       121  |    -0.48    0.00   12345  |     0.03      0.32\n",
-      "| 2.00e+05       134  |    -0.46    0.00   12345  |     0.00      0.34\n"
+      "| 2.00e+04        14  |    -0.00    0.00   12345  |     0.00      0.74\n",
+      "| 4.00e+04        29  |    -0.00    0.00   12345  |     0.00      1.29\n",
+      "| 6.00e+04        43  |    -0.00    0.00   12345  |     0.00      1.30\n",
+      "| 8.00e+04        57  |    -0.00    0.00   12345  |     0.00      1.30\n",
+      "| 1.00e+05        71  |    -0.00    0.00   12345  |     0.00      1.34\n",
+      "| 1.20e+05        85  |    -0.00    0.00   12345  |     0.00      1.35\n",
+      "| 1.40e+05       100  |    -0.00    0.00   12345  |     0.00      1.33\n",
+      "| 1.60e+05       114  |    -0.00    0.00   12345  |     0.00      1.38\n",
+      "| 1.80e+05       128  |    -0.00    0.00   12345  |     0.00      1.37\n",
+      "| 2.00e+05       142  |    -0.00    0.00   12345  |     0.00      1.40\n"
      ]
     }
    ],
    "source": [
-    "#Again what is the difference between test and train?  And what is the difference between this train and the first one?\n",
-    "#Are there new/different parameters?  Have preset values changed?\n",
     "FullSd = datetime.now()+timedelta(days=-365);\n",
     "FullSd = FullSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
@@ -1564,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1581,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {
     "id": "LpkoZpYzfneS"
    },
@@ -1942,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1954,10 +1962,10 @@
     {
      "data": {
       "text/plain": [
-       "9"
+       "38"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1968,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1980,10 +1988,10 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "5"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1994,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {
     "id": "Kl9nulnAJtiI"
    },
@@ -2005,8 +2013,13 @@
      "text": [
       "| load actor from: ./papertrading_erl_retrain/actor.pth\n",
       "Waiting for market to open...\n",
-      "1005 minutes til market open.\n",
-      "1004 minutes til market open.\n"
+      "Market opened.\n",
+      "5\n",
+      "Quantity is 0, order of | 0 AMCR sell | not completed.\n",
+      "Quantity is 0, order of | 0 PHUN sell | not completed.\n",
+      "Quantity is 0, order of | 0 GPRO sell | not completed.\n",
+      "Quantity is 0, order of | 0 ACI sell | not completed.\n",
+      "Quantity is 0, order of | 0 XRX sell | not completed.\n"
      ]
     }
    ],
@@ -2115,8 +2128,8 @@
     "df_erl, cumu_erl = alpaca_history(key=API_KEY, \n",
     "                                  secret=API_SECRET, \n",
     "                                  url=API_BASE_URL, \n",
-    "                                  start='2022-09-01', #must be within 1 month\n",
-    "                                  end='2022-09-12') #change the date if error occurs\n"
+    "                                  start='2023-02-10', #must be within 1 month\n",
+    "                                  end='2023-02-16') #change the date if error occurs\n"
    ]
   },
   {
