--- a/paper_test_notebooks/Alpaca_paper_stocktradernp_5minbot.ipynb
+++ b/paper_test_notebooks/Alpaca_paper_stocktradernp_5minbot.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,10 +811,10 @@
     "        #everything below was added to override the default parameters in stocktrading_NP\n",
     "        'config': None,\n",
     "        'initial_account': 2e3,\n",
-    "        'gamma': 0.85,\n",
-    "        'turbulence_thresh': 99,\n",
+    "        'gamma': 0.93,\n",
+    "        'turbulence_thresh': 30,\n",
     "        'min_stock_rate': 5e-1,\n",
-    "        'max_stock': 2e2,\n",
+    "        'max_stock': 1e2,\n",
     "        'initial_capital': 2e3,\n",
     "        'buy_cost_pct': 1e-2,\n",
     "        'sell_cost_pct': 1e-2,\n",
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,10 +895,10 @@
     "        #everything below was added to override the default parameters in stocktrading_NP\n",
     "        'config': None,\n",
     "        'initial_account': 2e3,\n",
-    "        'gamma': 0.85,\n",
-    "        'turbulence_thresh': 99,\n",
+    "        'gamma': 0.93,\n",
+    "        'turbulence_thresh': 30,\n",
     "        'min_stock_rate': 5e-1,\n",
-    "        'max_stock': 2e2,\n",
+    "        'max_stock': 1e2,\n",
     "        'initial_capital': 2e3,\n",
     "        'buy_cost_pct': 1e-2,\n",
     "        'sell_cost_pct': 1e-2,\n",
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,11 +954,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ERL_PARAMS = {\"learning_rate\": 3e-1,\"batch_size\": 2048,\"gamma\":  0.80,\n",
+    "#Make sure the gammas are the same in all 3 places\n",
+    "\n",
+    "ERL_PARAMS = {\"learning_rate\": 6e-2,\"batch_size\": 2048,\"gamma\":  0.93,\n",
     "        \"seed\":312,\"net_dimension\":[128,64,32,16,8,4], \"target_step\":40000, \"eval_gap\":30,\n",
     "        \"eval_times\":1} \n",
     "env = StockTradingEnv\n",
@@ -973,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1006,11 +1008,11 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        13  |    44.75    0.00    8189  |     0.12      0.21\n",
-      "| 4.00e+04        27  |    43.98    0.00    8189  |     0.27      0.39\n",
-      "| 6.00e+04        40  |    45.95    0.00    8189  |     0.09      0.58\n",
-      "| 8.00e+04        54  |    64.40    0.00    8189  |     0.14      0.69\n",
-      "| 1.00e+05        67  |    97.90    0.00    8189  |     0.17      0.82\n"
+      "| 2.00e+04        13  |     0.05    0.00    8189  |     0.04      0.10\n",
+      "| 4.00e+04        27  |    72.19    0.00    8189  |     0.43      0.11\n",
+      "| 6.00e+04        40  |    56.92    0.00    8189  |     0.16      0.10\n",
+      "| 8.00e+04        54  |    87.44    0.00    8189  |     0.53      0.11\n",
+      "| 1.00e+05        67  |   116.24    0.00    8189  |     0.14      0.13\n"
      ]
     }
    ],
@@ -1039,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1064,23 +1066,9 @@
      "output_type": "stream",
      "text": [
       "price_array:  3510\n",
-      "| load actor from: ./papertrading_erl/actor.pth\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_3712\\2192916491.py:106: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
-      "  s_tensor = _torch.as_tensor((state,), device=device)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "| load actor from: ./papertrading_erl/actor.pth\n",
       "Test Finished!\n",
-      "episode_return 1.1071423580638877\n"
+      "episode_return 1.098530574930211\n"
      ]
     }
    ],
@@ -1097,7 +1085,7 @@
     "                      model_name='ppo',\n",
     "                      if_vix=True, \n",
     "                      API_KEY = API_KEY, \n",
-    "                      API_SECRET = API_SECRET, \n",
+    "                      API_SECRET = API_SECRET,\n",
     "                      API_BASE_URL = API_BASE_URL,\n",
     "                      cwd='./papertrading_erl',\n",
     "                      net_dimension = ERL_PARAMS['net_dimension'])"
@@ -1105,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1138,16 +1126,16 @@
       "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
       "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
       "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        14  |   -36.68    0.00   12345  |     0.19      0.09\n",
-      "| 4.00e+04        28  |   -35.95    0.00   12345  |     0.14      0.25\n",
-      "| 6.00e+04        43  |   -35.22    0.00   12345  |     0.13      0.43\n",
-      "| 8.00e+04        57  |   -37.00    0.00   12345  |     0.12      0.80\n",
-      "| 1.00e+05        71  |   -35.12    0.00   12345  |     0.20      1.05\n",
-      "| 1.20e+05        85  |   -35.54    0.00   12345  |     0.21      1.23\n",
-      "| 1.40e+05       100  |   -35.12    0.00   12345  |     0.22      1.45\n",
-      "| 1.60e+05       114  |   -34.78    0.00   12345  |     0.16      1.46\n",
-      "| 1.80e+05       128  |   -37.36    0.00   12345  |     0.14      1.48\n",
-      "| 2.00e+05       142  |   -36.94    0.00   12345  |     0.13      1.48\n"
+      "| 2.00e+04        14  |    25.77    0.00   12345  |     0.34     -0.09\n",
+      "| 4.00e+04        29  |   -24.52    0.00   12345  |     0.42      0.01\n",
+      "| 6.00e+04        43  |   -25.74    0.00   12345  |     0.17      0.04\n",
+      "| 8.00e+04        57  |   -25.14    0.00   12345  |     0.19      0.18\n",
+      "| 1.00e+05        71  |   -25.74    0.00   12345  |     0.27      0.31\n",
+      "| 1.20e+05        85  |   -24.51    0.00   12345  |     0.35      0.33\n",
+      "| 1.40e+05       100  |   -25.27    0.00   12345  |     0.26      0.37\n",
+      "| 1.60e+05       114  |   -25.21    0.00   12345  |     0.19      0.38\n",
+      "| 1.80e+05       128  |   -26.01    0.00   12345  |     0.19      0.38\n",
+      "| 2.00e+05       142  |   -24.20    0.00   12345  |     0.19      0.41\n"
      ]
     }
    ],
@@ -1181,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1545,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
