Redid silver bot

--- a/_SilverBots/RunSilverBot_1.72_over90Days_NoTrain.ipynb
+++ b/_SilverBots/RunSilverBot_1.72_over90Days_NoTrain.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "#Ticker List\n",
-    "ticker_list = ['DBX','EC','VFC','SBGI','TGNA','APLE','XRX','RIG','AGNC','GME','BB'] "
+    "ticker_list = ['RIG','KEY','XRX','AMCR'] "
    ]
   },
   {
@@ -746,8 +746,8 @@
     "#Make sure the gammas are the same in all 3 places\n",
     "\n",
     "#TODO  make sure the parameters used in training are used here!\n",
-    "ERL_PARAMS = {\"learning_rate\": 0.005,\"batch_size\": 2048,\"gamma\":  0.85,  # need to adjust this in config as well during tuning\n",
-    "        \"seed\":312,\"net_dimension\":[128,64,32,16,8,4], \"target_step\":10000, \"eval_gap\":30,\n",
+    "ERL_PARAMS = {\"learning_rate\": 0.033,\"batch_size\": 2048,\"gamma\":  0.93,\n",
+    "        \"seed\":312,\"net_dimension\":[128,64,32,16,8], \"target_step\":30000, \"eval_gap\":30,\n",
     "        \"eval_times\":1} \n",
     "env = StockTradingEnv\n",
     "\n",
