--- a/_SilverBots/RunSilverBot_1.72_over90Days_NoTrain.ipynb
+++ b/_SilverBots/RunSilverBot_1.72_over90Days_NoTrain.ipynb
@@ -698,7 +698,7 @@
     "        # load agent\n",
     "        try:  \n",
     "            #TO do 2: change the file\n",
-    "            cwd = cwd + '/1.14_over10days_Mar28thSilver.pth'\n",
+    "            cwd = cwd + '/1.72_over90days_Mar1_testing.pth'\n",
     "            print(f\"| load actor from: {cwd}\")\n",
     "            actor.load_state_dict(torch.load(cwd, map_location=lambda storage, loc: storage))\n",
     "            act = actor\n",
@@ -827,7 +827,7 @@
     "                # load agent\n",
     "                try:  \n",
     "                    #TODO 3: Change the name\n",
-    "                    cwd = cwd + '/1.14_over10days_Mar28thSilver.pth'\n",
+    "                    cwd = cwd + '/1.72_over90days_Mar1_testing.pth'\n",
     "                    print(f\"| load actor from: {cwd}\")\n",
     "                    actor.load_state_dict(torch.load(cwd, map_location=lambda storage, loc: storage))\n",
     "                    self.act = actor\n",
@@ -1155,7 +1155,7 @@
     {
      "data": {
       "text/plain": [
-       "102"
+       "39"
       ]
      },
      "execution_count": 23,
@@ -1175,7 +1175,7 @@
     {
      "data": {
       "text/plain": [
-       "11"
+       "4"
       ]
      },
      "execution_count": 24,
@@ -1196,33 +1196,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| load actor from: ./bots/1.14_over10days_Mar28thSilver.pth\n",
-      "Waiting for market to open...\n",
-      "Market opened.\n",
-      "11\n",
-      "Quantity is 0, order of | 0 DBX sell | not completed.\n",
-      "Quantity is 0, order of | 0 RIG sell | not completed.\n",
-      "Quantity is 0, order of | 0 GME sell | not completed.\n"
+      "| load actor from: ./bots/1.14_over10days_Mar28thSilver.pth\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_15204\\1825690193.py:181: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
-      "  s_tensor = torch.as_tensor((state,), device=self.device)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Market order of | 15 SBGI buy | completed.\n",
-      "Market order of | 14 TGNA buy | completed.\n",
-      "Market order of | 38 APLE buy | completed.\n",
-      "Market order of | 26 XRX buy | completed.\n",
-      "Market order of | 34 AGNC buy | completed.\n",
-      "Market order of | 23 BB buy | completed.\n"
+     "ename": "ValueError",
+     "evalue": "Fail to load agent!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 19\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.__init__\u001b[1;34m(self, ticker_list, time_interval, drl_lib, agent, cwd, net_dim, state_dim, action_dim, API_KEY, API_SECRET, API_BASE_URL, tech_indicator_list, turbulence_thresh, max_stock, latency)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m| load actor from: \u001b[39m\u001b[39m{\u001b[39;00mcwd\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 19\u001b[0m actor\u001b[39m.\u001b[39;49mload_state_dict(torch\u001b[39m.\u001b[39;49mload(cwd, map_location\u001b[39m=\u001b[39;49m\u001b[39mlambda\u001b[39;49;00m storage, loc: storage))\n\u001b[0;32m     20\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mact \u001b[39m=\u001b[39m actor\n",
+      "File \u001b[1;32mc:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\torch\\nn\\modules\\module.py:1671\u001b[0m, in \u001b[0;36mModule.load_state_dict\u001b[1;34m(self, state_dict, strict)\u001b[0m\n\u001b[0;32m   1670\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(error_msgs) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m-> 1671\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mError(s) in loading state_dict for \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[0;32m   1672\u001b[0m                        \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\t\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(error_msgs)))\n\u001b[0;32m   1673\u001b[0m \u001b[39mreturn\u001b[39;00m _IncompatibleKeys(missing_keys, unexpected_keys)\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Error(s) in loading state_dict for ActorPPO:\n\tUnexpected key(s) in state_dict: \"net.12.weight\", \"net.12.bias\". \n\tsize mismatch for action_std_log: copying a param with shape torch.Size([1, 11]) from checkpoint, the shape in current model is torch.Size([1, 4]).\n\tsize mismatch for net.0.weight: copying a param with shape torch.Size([128, 102]) from checkpoint, the shape in current model is torch.Size([128, 39]).",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#Run bot\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m#5 TODO Change the bot name and time interval used in training are set\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m paper_trading_erl \u001b[39m=\u001b[39m AlpacaPaperTrading(ticker_list \u001b[39m=\u001b[39;49m ticker_list, \n\u001b[0;32m      4\u001b[0m                                        time_interval \u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m1H\u001b[39;49m\u001b[39m'\u001b[39;49m, \n\u001b[0;32m      5\u001b[0m                                        drl_lib \u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39melegantrl\u001b[39;49m\u001b[39m'\u001b[39;49m, \n\u001b[0;32m      6\u001b[0m                                        agent \u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39mppo\u001b[39;49m\u001b[39m'\u001b[39;49m, \n\u001b[0;32m      7\u001b[0m                                        cwd \u001b[39m=\u001b[39;49m \u001b[39m'\u001b[39;49m\u001b[39m./bots\u001b[39;49m\u001b[39m'\u001b[39;49m, \n\u001b[0;32m      8\u001b[0m                                        net_dim \u001b[39m=\u001b[39;49m ERL_PARAMS[\u001b[39m'\u001b[39;49m\u001b[39mnet_dimension\u001b[39;49m\u001b[39m'\u001b[39;49m], \n\u001b[0;32m      9\u001b[0m                                        state_dim \u001b[39m=\u001b[39;49m state_dim, \n\u001b[0;32m     10\u001b[0m                                        action_dim\u001b[39m=\u001b[39;49m action_dim, \n\u001b[0;32m     11\u001b[0m                                        API_KEY \u001b[39m=\u001b[39;49m API_KEY, \n\u001b[0;32m     12\u001b[0m                                        API_SECRET \u001b[39m=\u001b[39;49m API_SECRET, \n\u001b[0;32m     13\u001b[0m                                        API_BASE_URL \u001b[39m=\u001b[39;49m API_BASE_URL, \n\u001b[0;32m     14\u001b[0m                                        tech_indicator_list \u001b[39m=\u001b[39;49m customIndicators, \n\u001b[0;32m     15\u001b[0m                                        turbulence_thresh\u001b[39m=\u001b[39;49m\u001b[39m30\u001b[39;49m, \n\u001b[0;32m     16\u001b[0m                                        max_stock\u001b[39m=\u001b[39;49m\u001b[39m100\u001b[39;49m)  \u001b[39m# this is the max that can be placed at one time, not the max the bot will buy if capital is available\u001b[39;00m\n\u001b[0;32m     18\u001b[0m paper_trading_erl\u001b[39m.\u001b[39mrun()\n",
+      "Cell \u001b[1;32mIn[22], line 23\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.__init__\u001b[1;34m(self, ticker_list, time_interval, drl_lib, agent, cwd, net_dim, state_dim, action_dim, API_KEY, API_SECRET, API_BASE_URL, tech_indicator_list, turbulence_thresh, max_stock, latency)\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdevice \u001b[39m=\u001b[39m agent\u001b[39m.\u001b[39mdevice\n\u001b[0;32m     22\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mBaseException\u001b[39;00m:\n\u001b[1;32m---> 23\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mFail to load agent!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     25\u001b[0m \u001b[39melif\u001b[39;00m drl_lib \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mrllib\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     26\u001b[0m     \u001b[39mfrom\u001b[39;00m \u001b[39mray\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mrllib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39magents\u001b[39;00m \u001b[39mimport\u001b[39;00m ppo\n",
+      "\u001b[1;31mValueError\u001b[0m: Fail to load agent!"
      ]
     }
    ],
