--- a/_Goldbots/RunGoldBot_TEMPLATE.ipynb
+++ b/_Goldbots/RunGoldBot_TEMPLATE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\pyfolio\\pos.py:26: UserWarning: Module \"zipline.assets\" not found; multipliers will not be applied to position notionals.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -56,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,17 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Ticker List\n",
-    "ticker_list = ['RIG','KEY','XRX','AMCR'] "
+    "ticker_list = ['RIG','APLE','XRX','AGNC'] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +689,7 @@
     "        # load agent\n",
     "        try:  \n",
     "            #TO do 2: change the file\n",
-    "            cwd = cwd + '/1.14_over10days_Mar28thSilver.pth'\n",
+    "            cwd = cwd + '/1.72_over90days_Mar12023.pth'\n",
     "            print(f\"| load actor from: {cwd}\")\n",
     "            actor.load_state_dict(torch.load(cwd, map_location=lambda storage, loc: storage))\n",
     "            act = actor\n",
@@ -739,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +818,7 @@
     "                # load agent\n",
     "                try:  \n",
     "                    #TODO 3: Change the name\n",
-    "                    cwd = cwd + '/1.14_over10days_Mar28thSilver.pth'\n",
+    "                    cwd = cwd + '/1.72_over90days_Mar12023.pth'\n",
     "                    print(f\"| load actor from: {cwd}\")\n",
     "                    actor.load_state_dict(torch.load(cwd, map_location=lambda storage, loc: storage))\n",
     "                    self.act = actor\n",
@@ -1149,16 +1140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "102"
+       "39"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,16 +1160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11"
+       "4"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,40 +1180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| load actor from: ./bots/1.14_over10days_Mar28thSilver.pth\n",
+      "| load actor from: ./bots/1.72_over90days_Mar12023.pth\n",
       "Waiting for market to open...\n",
-      "Market opened.\n",
-      "11\n",
-      "Quantity is 0, order of | 0 DBX sell | not completed.\n",
-      "Quantity is 0, order of | 0 RIG sell | not completed.\n",
-      "Quantity is 0, order of | 0 GME sell | not completed.\n"
+      "Market opened.\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_15204\\1825690193.py:181: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
-      "  s_tensor = torch.as_tensor((state,), device=self.device)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Market order of | 15 SBGI buy | completed.\n",
-      "Market order of | 14 TGNA buy | completed.\n",
-      "Market order of | 38 APLE buy | completed.\n",
-      "Market order of | 26 XRX buy | completed.\n",
-      "Market order of | 34 AGNC buy | completed.\n",
-      "Market order of | 23 BB buy | completed.\n"
+     "ename": "ValueError",
+     "evalue": "'BB' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[141], line 18\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#Run bot\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m#5 TODO Change the bot name and time interval used in training are set\u001b[39;00m\n\u001b[0;32m      3\u001b[0m paper_trading_erl \u001b[39m=\u001b[39m AlpacaPaperTrading(ticker_list \u001b[39m=\u001b[39m ticker_list, \n\u001b[0;32m      4\u001b[0m                                        time_interval \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m1H\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[0;32m      5\u001b[0m                                        drl_lib \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39melegantrl\u001b[39m\u001b[39m'\u001b[39m, \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     15\u001b[0m                                        turbulence_thresh\u001b[39m=\u001b[39m\u001b[39m30\u001b[39m, \n\u001b[0;32m     16\u001b[0m                                        max_stock\u001b[39m=\u001b[39m\u001b[39m20\u001b[39m)  \u001b[39m# this is the max that can be placed at one time, not the max the bot will buy if capital is available\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m paper_trading_erl\u001b[39m.\u001b[39;49mrun()\n",
+      "Cell \u001b[1;32mIn[138], line 159\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.run\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    156\u001b[0m   time\u001b[39m.\u001b[39msleep(\u001b[39m60\u001b[39m \u001b[39m*\u001b[39m \u001b[39m15\u001b[39m)\n\u001b[0;32m    158\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 159\u001b[0m   \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtrade()\n\u001b[0;32m    160\u001b[0m   last_equity \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39malpaca\u001b[39m.\u001b[39mget_account()\u001b[39m.\u001b[39mlast_equity)\n\u001b[0;32m    161\u001b[0m   cur_time \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n",
+      "Cell \u001b[1;32mIn[138], line 177\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.trade\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    176\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtrade\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m--> 177\u001b[0m     state \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_state()\n\u001b[0;32m    179\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdrl_lib \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39melegantrl\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m    180\u001b[0m         \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n",
+      "Cell \u001b[1;32mIn[138], line 266\u001b[0m, in \u001b[0;36mAlpacaPaperTrading.get_state\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    264\u001b[0m stocks \u001b[39m=\u001b[39m [\u001b[39m0\u001b[39m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstockUniverse)\n\u001b[0;32m    265\u001b[0m \u001b[39mfor\u001b[39;00m position \u001b[39min\u001b[39;00m positions:\n\u001b[1;32m--> 266\u001b[0m     ind \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstockUniverse\u001b[39m.\u001b[39;49mindex(position\u001b[39m.\u001b[39;49msymbol)\n\u001b[0;32m    267\u001b[0m     stocks[ind] \u001b[39m=\u001b[39m ( \u001b[39mabs\u001b[39m(\u001b[39mint\u001b[39m(\u001b[39mfloat\u001b[39m(position\u001b[39m.\u001b[39mqty))))\n\u001b[0;32m    269\u001b[0m stocks \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(stocks, dtype \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: 'BB' is not in list"
      ]
     }
    ],
@@ -1242,7 +1223,7 @@
     "                                       API_BASE_URL = API_BASE_URL, \n",
     "                                       tech_indicator_list = customIndicators, \n",
     "                                       turbulence_thresh=30, \n",
-    "                                       max_stock=100)  # this is the max that can be placed at one time, not the max the bot will buy if capital is available\n",
+    "                                       max_stock=20)  # this is the max that can be placed at one time, not the max the bot will buy if capital is available\n",
     "                                                       \n",
     "paper_trading_erl.run()"
    ]
