--- a/_SilverBots/RunSilverBot_1.14_over10Days_NoTrain.ipynb
+++ b/_SilverBots/RunSilverBot_1.14_over10Days_NoTrain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gregs\\anaconda3\\envs\\finrlenv\\lib\\site-packages\\pyfolio\\pos.py:26: UserWarning: Module \"zipline.assets\" not found; multipliers will not be applied to position notionals.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -56,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,17 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alpaca successfully connected\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "DP = DataProcessor(data_source = 'alpaca',\n",
     "                  API_KEY = API_KEY, \n",
@@ -145,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1141,7 @@
        "102"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1161,7 @@
        "11"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1202,37 +1185,43 @@
       "11\n",
       "Quantity is 0, order of | 0 DBX sell | not completed.\n",
       "Quantity is 0, order of | 0 RIG sell | not completed.\n",
-      "Quantity is 0, order of | 0 GME sell | not completed.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_15204\\1825690193.py:181: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
-      "  s_tensor = torch.as_tensor((state,), device=self.device)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Market order of | 15 SBGI buy | completed.\n",
-      "Market order of | 14 TGNA buy | completed.\n",
-      "Market order of | 38 APLE buy | completed.\n",
+      "Quantity is 0, order of | 0 GME sell | not completed.\n",
+      "Market order of | 16 SBGI buy | completed.\n",
+      "Market order of | 13 TGNA buy | completed.\n",
+      "Market order of | 37 APLE buy | completed.\n",
       "Market order of | 26 XRX buy | completed.\n",
       "Market order of | 34 AGNC buy | completed.\n",
-      "Market order of | 23 BB buy | completed.\n",
+      "Market order of | 24 BB buy | completed.\n",
       "11\n",
       "Quantity is 0, order of | 0 DBX sell | not completed.\n",
       "Quantity is 0, order of | 0 RIG sell | not completed.\n",
       "Quantity is 0, order of | 0 GME sell | not completed.\n",
-      "Market order of | 15 SBGI buy | completed.\n",
-      "Market order of | 14 TGNA buy | completed.\n",
-      "Market order of | 38 APLE buy | completed.\n",
+      "Market order of | 16 SBGI buy | completed.\n",
+      "Market order of | 13 TGNA buy | completed.\n",
+      "Market order of | 37 APLE buy | completed.\n",
       "Market order of | 26 XRX buy | completed.\n",
-      "Market order of | 34 AGNC buy | completed.\n",
-      "Market order of | 23 BB buy | completed.\n"
+      "Market order of | 33 AGNC buy | completed.\n",
+      "Market order of | 24 BB buy | completed.\n",
+      "11\n",
+      "Quantity is 0, order of | 0 DBX sell | not completed.\n",
+      "Quantity is 0, order of | 0 RIG sell | not completed.\n",
+      "Quantity is 0, order of | 0 GME sell | not completed.\n",
+      "Market order of | 16 SBGI buy | completed.\n",
+      "Market order of | 12 TGNA buy | completed.\n",
+      "Market order of | 37 APLE buy | completed.\n",
+      "Market order of | 26 XRX buy | completed.\n",
+      "Market order of | 33 AGNC buy | completed.\n",
+      "Market order of | 24 BB buy | completed.\n",
+      "11\n",
+      "Quantity is 0, order of | 0 DBX sell | not completed.\n",
+      "Quantity is 0, order of | 0 RIG sell | not completed.\n",
+      "Quantity is 0, order of | 0 GME sell | not completed.\n",
+      "Market order of | 17 SBGI buy | completed.\n",
+      "Market order of | 12 TGNA buy | completed.\n",
+      "Market order of | 37 APLE buy | completed.\n",
+      "Market order of | 26 XRX buy | completed.\n",
+      "Market order of | 33 AGNC buy | completed.\n",
+      "Market order of | 24 BB buy | completed.\n"
      ]
     }
    ],
